# serializer version: 1
# name: TestAttach.test_attach_collision_raises_error
  '''
  Error: bundle already has an attachment with slug 'fsm' (01-fsm.json).
  Pass --rename to use a different slug.
  
  '''
# ---
# name: TestAttach.test_attach_directory_host_raises_error
  '''
  attach host must be a .md leaf doc (NN-<slug>.md), got directory: 00-codex
  
  '''
# ---
# name: TestAttach.test_attach_dry_run_writes_nothing
  '''
  Would attach: <TMPDIR>/fsm.json -> 00-codex/01-fsm.json
    Bundle: doc00.01 (01-logic.md)
    Prefix: 01
  (dry-run: no files modified)
  
  '''
# ---
# name: TestAttach.test_attach_leaf_uses_source_stem
  '''
  Wrote index: 00-codex/00-index.md
  Wrote <TMPDIR>/.rhidoc/MANIFEST.md
  Attached: <TMPDIR>/fsm.json -> 00-codex/01-fsm.json
    Bundle: doc00.01 (01-logic.md)
    Prefix: 01
  
  '''
# ---
# name: TestAttach.test_attach_non_md_host_raises_error_with_swap_hint
  '''
  attach host must be a .md leaf doc (NN-<slug>.md), got .json file: 01-logic.statemachine.json. Did you swap <host> and <source>? Usage: rhidoc attach <host> <source>
  
  '''
# ---
# name: TestBundleAwareMoveDeleteRename.test_delete_attachment_directly_raises_error
  '''
  cannot delete an attachment directly; delete its root md: 01-logic.statemachine.json
  
  '''
# ---
# name: TestBundleAwareMoveDeleteRename.test_move_attachment_directly_raises_error
  '''
  cannot move an attachment directly; move its root md
  
  '''
# ---
# name: TestBundleAwareMoveDeleteRename.test_move_bundle_attachments_not_in_rename_map
  '''
  === Planned filesystem moves ===
    <TMPDIR>/.rhidoc/00-codex/02-state.md -> <TMPDIR>/.rhidoc/00-codex/01-state.md
    <TMPDIR>/.rhidoc/00-codex/03-extra.md -> <TMPDIR>/.rhidoc/00-codex/02-extra.md
    <TMPDIR>/.rhidoc/00-codex/03-extra.notes.txt -> <TMPDIR>/.rhidoc/00-codex/02-extra.notes.txt
    <TMPDIR>/.rhidoc/00-codex/01-logic.md -> <TMPDIR>/.rhidoc/00-codex/03-logic.md
    <TMPDIR>/.rhidoc/00-codex/01-design.png -> <TMPDIR>/.rhidoc/00-codex/03-design.png
    <TMPDIR>/.rhidoc/00-codex/01-logic.statemachine.json -> <TMPDIR>/.rhidoc/00-codex/03-logic.statemachine.json
  
  === Ref rename map ===
    doc00.01 -> doc00.03
    doc00.02 -> doc00.01
    doc00.03 -> doc00.02
  
  (dry-run: no files modified)
  
  '''
# ---
# name: TestBundleAwareMoveDeleteRename.test_rename_output_shows_unchanged_attachments
  '''
  Wrote index: 00-codex/00-index.md
  Wrote index: 01-product/00-index.md
  Wrote <TMPDIR>/.rhidoc/MANIFEST.md
  Renamed: 01-logic.md -> 01-engine.md
  Renamed: 01-logic.statemachine.json -> 01-engine.statemachine.json
  Left unchanged (same prefix, different slug): 01-design.png
  
  '''
# ---
# name: TestBundleAwarePunchHoist.test_hoist_attachments_not_in_ref_rename_map
  '''
  === Planned hoist ===
  Dissolving: 01-product/01-chapter
  Children to hoist: 2
  Index: discarded (+ 1 attachment(s) discarded)
  
  === Filesystem moves ===
    01-product/01-chapter/01-intro.md -> 01-product/01-intro.md
    01-product/01-chapter/01-intro.notes.txt -> 01-product/01-intro.notes.txt
    01-product/01-chapter/02-body.md -> 01-product/02-body.md
    01-product/01-chapter/02-body.diagram.svg -> 01-product/02-body.diagram.svg
    01-product/02-extra.md -> 01-product/03-extra.md
  
  === Ref rename map (3 entries) ===
    doc01.01.01 -> doc01.01
    doc01.01.02 -> doc01.02
    doc01.02 -> doc01.03
  
  (dry-run: no files modified)
  
  '''
# ---
# name: TestBundleAwarePunchHoist.test_punch_dry_run_shows_attachment_moves
  '''
  Would punch: 01-game.md -> 01-game/01-game.md (content)
  Would punch: 01-game.md -> 01-game/00-index.md (generated index)
  Would move attachment: 01-game.mockup.png -> 01-game/01-game.mockup.png
  Would move attachment: 01-game.xstate.json -> 01-game/01-game.xstate.json
  Would shift refs:
    doc00.01 -> doc00.01.01
  
  (dry-run: no files modified)
  
  '''
# ---
# name: TestCatCommand.test_cat_nonexistent_ref
  '''
  Error: Cannot resolve segment '99' in <TMPDIR>/.rhidoc: no entry starting with '99-'
  
  '''
# ---
# name: TestDelete.test_delete_orphan_warning
  '''
  === Planned deletions ===
    DELETE file: 01-product-strategy/02-principles.md
  
  Refs removed (1):
    doc01.02
  
  === Gap-closing moves (2) ===
    01-product-strategy/03-glossary.md -> 01-product-strategy/02-glossary.md
    01-product-strategy/04-primary-sources -> 01-product-strategy/03-primary-sources
  
  === Ref rename map (6 entries) ===
    doc01.03 -> doc01.02
    doc01.04 -> doc01.03
    doc01.04.00 -> doc01.03.00
    doc01.04.01 -> doc01.03.01
    doc01.04.02 -> doc01.03.02
    doc01.04.03 -> doc01.03.03
  
  === Orphaned ref warnings (4) ===
    doc01.02 in 01-product-strategy/00-index.md: | doc01.02 | Principles | doc | Design principles. | principles, design |
    doc01.02 in 01-product-strategy/01-mission.md: deps: [doc01.02]
    doc01.02 in 01-product-strategy/03-glossary.md: deps: [doc01.02]
    doc01.02 in 02-product-design/05-metamodel.md: deps: [doc01.02]
  
  (dry-run: no files modified)
  
  '''
# ---
# name: TestHelpAi.test_ai_skill_includes_behavioral_rules
  '''
  # rhidoc AI Reference — <VERSION>
  
  Compact semantic reference for AI agents driving the rhidoc CLI. This is the index; run `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>` for the full block (behavior, args, side effects, examples) on any single command.
  
  ---
  
  ## Bundles and Attachments
  
  A **bundle** is the set of siblings in a directory that share a two-digit numeric prefix (`NN`).
  
  - **Bundle root**: the `NN-<slug>.md` file in that directory.
  - **Attachment** (sidecar): any other file in the same directory whose name begins with the same `NN` prefix and is not a directory.
  - Attachment regex: `^(\d{2})-[^/]+\.[^./]+$` excluding `\.md$`.
  
  Attachments carry no frontmatter. Membership is determined by prefix alone, not by filename content or any declaration.
  
  Every structural operation (`move`, `delete`, `rename`, `punch`, `hoist`) treats the bundle as a unit: when the root travels, all same-prefix siblings travel with it automatically.
  
  **Orphans**: a file whose `NN` prefix has no corresponding `.md` root, or whose prefix matches a directory rather than a file, is an orphan. `rhidoc regenerate` prints orphan warnings to stderr but never blocks operation.
  
  Use `rhidoc attach` to place a new non-md artifact alongside its host doc.
  
  **Sidecar display refs**: `rhidoc tree --refs` and `rhidoc bundle` display sidecars using the ref format `docXX.YY.ZZ/<slug>.<ext>`, where `docXX.YY.ZZ` is the host doc ref. These refs are for display only — no command accepts sidecar refs as input arguments.
  
  ---
  
  ## 1. Commands
  
  Full detail per command: `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>`.
  
  | Command | Synopsis |
  |---------|----------|
  | `regenerate` | Rebuild MANIFEST.md |
  | `make` | Create a doc or group at a position |
  | `delete` | Delete entries with gap-closing |
  | `move` | Move/reorder entries |
  | `punch` | Expand leaf into directory |
  | `hoist` | Dissolve directory |
  | `copy` | Copy file into workspace |
  | `attach` | Copy an external file into a doc's bundle as an attachment. Bundles are sets of files sharing a numeric prefix; `attach` aligns the copied file with the target doc's prefix. |
  | `rewrite` | Rewrite doc refs |
  | `rename` | Rename a directory or file slug |
  | `init` | Initialize a new workspace |
  | `portable` | Dump editable scripts into workspace |
  | `templates` | Print a shipped template (codex doc, skill, agent wiring) to stdout |
  | `ai-skill` | Print compact AI agent reference (pass a command name for its full block) |
  | `cat` | Print document contents by ref |
  | `tree` | Print workspace structure as a tree |
  | `ls` | List entries in a directory |
  | `bundle` | Show a doc's bundle (host + attachments) |
  | `orphans` | List orphaned attachments in the workspace |
  | `mdapi` | Structured read operations on a markdown doc |
  
  ---
  
  ## 2. Behavioral Rules
  
  - **Gap-closing**: When an entry is removed from a directory (`move`, `delete`, `hoist`),
    all higher-numbered siblings are renumbered down to fill the gap.
  - **Ref rewriting**: All commands that change file positions rewrite `docXX.YY.ZZ` refs
    across all `.md` files in the workspace and in `externalRefPaths` from `.rhidoc.json`.
  - **Bundles**: Structural operations treat a bundle (root `.md` + same-prefix siblings) as a
    unit. Non-md sidecars travel with their host automatically — no declaration required.
  - **Orphan warnings**: `rhidoc regenerate` prints a stderr warning for any sidecar file whose
    numeric prefix has no corresponding `.md` root, or whose prefix matches a directory. Orphan
    warnings never block operation; the MANIFEST is still written.
  - **Argument resolution**: `source`/`target`/`destination` args accept either a doc ref or a
    real existing filesystem path (relative to workspace root). Three ref input forms are accepted
    and normalized to canonical `docXX.YY` on entry: `doc04.08` (full), `d04.08` (short), `04.08`
    (bare coordinate). Fuzzy stem/prefix guessing is NOT supported — misspelled paths do not
    silently resolve. The slug after `NN-` is descriptive and never part of a reference.
  - **`--no-regen` scope**: Skips MANIFEST.md rebuild only. Ref rewriting in doc content still
    happens. Useful for batch operations — run many moves with `--no-regen`, then one final
    `rhidoc regenerate`.
  - **Index files**: `00-index.md` bodies are **generated artifacts** — rewritten by `rhidoc regenerate`
    and by any structural command that triggers regeneration. Do NOT hand-author the body of a `00-index.md`;
    edits will be overwritten. The only authored field is the frontmatter `title`. Contents tables and Topics
    lines are computed from direct children at regeneration time.
    `00-index.md` files cannot be renamed via `move --rename`; use `rename` to change the directory slug.
  - **Position 0 is reserved**: When a directory contains a `00-index.md`, slot 00 is reserved for it.
    Targeting slot 00 with `--at` or `--before` in such a directory is an error. At the workspace root
    (which has no `00-index.md`), slot 00 is a normal group position and may be targeted freely.
  
  ---
  
  ## 3. Common Patterns
  
  - **Batch restructure**: Use `--no-gap-close --no-regen` on all moves, then `rhidoc regenerate` once at end.
    ```
    rhidoc move doc01.02 01-strategy --no-gap-close --no-regen
    rhidoc move doc01.03 01-strategy --no-gap-close --no-regen
    rhidoc regenerate
    ```
  - **Dissolve a group**: Move children out one by one (check paths between moves), then delete
    the empty index file and remove the empty directory.
    ```
    rhidoc move 02-old-group/01-child.md 03-new-home --no-regen
    rhidoc move 02-old-group/02-child.md 03-new-home --no-regen
    rhidoc delete 02-old-group
    ```
  - **Create a new title group**: `rhidoc make -g PARENT slug` creates the directory
    with `00-index.md`. Then use `rhidoc move` or `rhidoc make` to populate it.
  - **Expand a file into a group**: `rhidoc punch <target>` converts `NN-slug.md` into a directory
    group: content moves to `NN-slug/01-slug.md` and a generated `00-index.md` is created. Inbound
    refs are shifted from `docXX.YY` to `docXX.YY.01` automatically.
  - **Hoist a subdirectory**: `rhidoc hoist <target>` hoists children into parent, removing
    the directory. Use `--keep-index` to preserve the index as a sibling file.
  - **Rename a slug**: `rhidoc rename <target> new-slug` renames on disk. Then use
    `rhidoc rewrite old-ref=new-ref` to update references if needed (rename does not rewrite refs).
  
  ---
  
  ## 4. Workspace State
  
  Workspace root: `.rhidoc/`
  
  | Directory | Title | Docs | Sidecars |
  |-----------|-------|------|----------|
  | `00-codex` | Codex | 7 | 0 |
  | `01-product-strategy` | Product Strategy | 8 | 0 |
  | `02-product-design` | Product Design | 14 | 0 |
  | `03-architecture` | Architecture | 7 | 0 |
  
  **Total docs**: 36
  **Total sidecars**: 0
  
  **externalRefPaths**: none configured
  
  '''
# ---
# name: TestHelpAi.test_ai_skill_includes_workspace_state
  '''
  # rhidoc AI Reference — <VERSION>
  
  Compact semantic reference for AI agents driving the rhidoc CLI. This is the index; run `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>` for the full block (behavior, args, side effects, examples) on any single command.
  
  ---
  
  ## Bundles and Attachments
  
  A **bundle** is the set of siblings in a directory that share a two-digit numeric prefix (`NN`).
  
  - **Bundle root**: the `NN-<slug>.md` file in that directory.
  - **Attachment** (sidecar): any other file in the same directory whose name begins with the same `NN` prefix and is not a directory.
  - Attachment regex: `^(\d{2})-[^/]+\.[^./]+$` excluding `\.md$`.
  
  Attachments carry no frontmatter. Membership is determined by prefix alone, not by filename content or any declaration.
  
  Every structural operation (`move`, `delete`, `rename`, `punch`, `hoist`) treats the bundle as a unit: when the root travels, all same-prefix siblings travel with it automatically.
  
  **Orphans**: a file whose `NN` prefix has no corresponding `.md` root, or whose prefix matches a directory rather than a file, is an orphan. `rhidoc regenerate` prints orphan warnings to stderr but never blocks operation.
  
  Use `rhidoc attach` to place a new non-md artifact alongside its host doc.
  
  **Sidecar display refs**: `rhidoc tree --refs` and `rhidoc bundle` display sidecars using the ref format `docXX.YY.ZZ/<slug>.<ext>`, where `docXX.YY.ZZ` is the host doc ref. These refs are for display only — no command accepts sidecar refs as input arguments.
  
  ---
  
  ## 1. Commands
  
  Full detail per command: `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>`.
  
  | Command | Synopsis |
  |---------|----------|
  | `regenerate` | Rebuild MANIFEST.md |
  | `make` | Create a doc or group at a position |
  | `delete` | Delete entries with gap-closing |
  | `move` | Move/reorder entries |
  | `punch` | Expand leaf into directory |
  | `hoist` | Dissolve directory |
  | `copy` | Copy file into workspace |
  | `attach` | Copy an external file into a doc's bundle as an attachment. Bundles are sets of files sharing a numeric prefix; `attach` aligns the copied file with the target doc's prefix. |
  | `rewrite` | Rewrite doc refs |
  | `rename` | Rename a directory or file slug |
  | `init` | Initialize a new workspace |
  | `portable` | Dump editable scripts into workspace |
  | `templates` | Print a shipped template (codex doc, skill, agent wiring) to stdout |
  | `ai-skill` | Print compact AI agent reference (pass a command name for its full block) |
  | `cat` | Print document contents by ref |
  | `tree` | Print workspace structure as a tree |
  | `ls` | List entries in a directory |
  | `bundle` | Show a doc's bundle (host + attachments) |
  | `orphans` | List orphaned attachments in the workspace |
  | `mdapi` | Structured read operations on a markdown doc |
  
  ---
  
  ## 2. Behavioral Rules
  
  - **Gap-closing**: When an entry is removed from a directory (`move`, `delete`, `hoist`),
    all higher-numbered siblings are renumbered down to fill the gap.
  - **Ref rewriting**: All commands that change file positions rewrite `docXX.YY.ZZ` refs
    across all `.md` files in the workspace and in `externalRefPaths` from `.rhidoc.json`.
  - **Bundles**: Structural operations treat a bundle (root `.md` + same-prefix siblings) as a
    unit. Non-md sidecars travel with their host automatically — no declaration required.
  - **Orphan warnings**: `rhidoc regenerate` prints a stderr warning for any sidecar file whose
    numeric prefix has no corresponding `.md` root, or whose prefix matches a directory. Orphan
    warnings never block operation; the MANIFEST is still written.
  - **Argument resolution**: `source`/`target`/`destination` args accept either a doc ref or a
    real existing filesystem path (relative to workspace root). Three ref input forms are accepted
    and normalized to canonical `docXX.YY` on entry: `doc04.08` (full), `d04.08` (short), `04.08`
    (bare coordinate). Fuzzy stem/prefix guessing is NOT supported — misspelled paths do not
    silently resolve. The slug after `NN-` is descriptive and never part of a reference.
  - **`--no-regen` scope**: Skips MANIFEST.md rebuild only. Ref rewriting in doc content still
    happens. Useful for batch operations — run many moves with `--no-regen`, then one final
    `rhidoc regenerate`.
  - **Index files**: `00-index.md` bodies are **generated artifacts** — rewritten by `rhidoc regenerate`
    and by any structural command that triggers regeneration. Do NOT hand-author the body of a `00-index.md`;
    edits will be overwritten. The only authored field is the frontmatter `title`. Contents tables and Topics
    lines are computed from direct children at regeneration time.
    `00-index.md` files cannot be renamed via `move --rename`; use `rename` to change the directory slug.
  - **Position 0 is reserved**: When a directory contains a `00-index.md`, slot 00 is reserved for it.
    Targeting slot 00 with `--at` or `--before` in such a directory is an error. At the workspace root
    (which has no `00-index.md`), slot 00 is a normal group position and may be targeted freely.
  
  ---
  
  ## 3. Common Patterns
  
  - **Batch restructure**: Use `--no-gap-close --no-regen` on all moves, then `rhidoc regenerate` once at end.
    ```
    rhidoc move doc01.02 01-strategy --no-gap-close --no-regen
    rhidoc move doc01.03 01-strategy --no-gap-close --no-regen
    rhidoc regenerate
    ```
  - **Dissolve a group**: Move children out one by one (check paths between moves), then delete
    the empty index file and remove the empty directory.
    ```
    rhidoc move 02-old-group/01-child.md 03-new-home --no-regen
    rhidoc move 02-old-group/02-child.md 03-new-home --no-regen
    rhidoc delete 02-old-group
    ```
  - **Create a new title group**: `rhidoc make -g PARENT slug` creates the directory
    with `00-index.md`. Then use `rhidoc move` or `rhidoc make` to populate it.
  - **Expand a file into a group**: `rhidoc punch <target>` converts `NN-slug.md` into a directory
    group: content moves to `NN-slug/01-slug.md` and a generated `00-index.md` is created. Inbound
    refs are shifted from `docXX.YY` to `docXX.YY.01` automatically.
  - **Hoist a subdirectory**: `rhidoc hoist <target>` hoists children into parent, removing
    the directory. Use `--keep-index` to preserve the index as a sibling file.
  - **Rename a slug**: `rhidoc rename <target> new-slug` renames on disk. Then use
    `rhidoc rewrite old-ref=new-ref` to update references if needed (rename does not rewrite refs).
  
  ---
  
  ## 4. Workspace State
  
  Workspace root: `.rhidoc/`
  
  | Directory | Title | Docs | Sidecars |
  |-----------|-------|------|----------|
  | `00-codex` | Codex | 7 | 0 |
  | `01-product-strategy` | Product Strategy | 8 | 0 |
  | `02-product-design` | Product Design | 14 | 0 |
  | `03-architecture` | Architecture | 7 | 0 |
  
  **Total docs**: 36
  **Total sidecars**: 0
  
  **externalRefPaths**: none configured
  
  '''
# ---
# name: TestHelpAi.test_ai_skill_lists_all_commands
  '''
  # rhidoc AI Reference — <VERSION>
  
  Compact semantic reference for AI agents driving the rhidoc CLI. This is the index; run `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>` for the full block (behavior, args, side effects, examples) on any single command.
  
  ---
  
  ## Bundles and Attachments
  
  A **bundle** is the set of siblings in a directory that share a two-digit numeric prefix (`NN`).
  
  - **Bundle root**: the `NN-<slug>.md` file in that directory.
  - **Attachment** (sidecar): any other file in the same directory whose name begins with the same `NN` prefix and is not a directory.
  - Attachment regex: `^(\d{2})-[^/]+\.[^./]+$` excluding `\.md$`.
  
  Attachments carry no frontmatter. Membership is determined by prefix alone, not by filename content or any declaration.
  
  Every structural operation (`move`, `delete`, `rename`, `punch`, `hoist`) treats the bundle as a unit: when the root travels, all same-prefix siblings travel with it automatically.
  
  **Orphans**: a file whose `NN` prefix has no corresponding `.md` root, or whose prefix matches a directory rather than a file, is an orphan. `rhidoc regenerate` prints orphan warnings to stderr but never blocks operation.
  
  Use `rhidoc attach` to place a new non-md artifact alongside its host doc.
  
  **Sidecar display refs**: `rhidoc tree --refs` and `rhidoc bundle` display sidecars using the ref format `docXX.YY.ZZ/<slug>.<ext>`, where `docXX.YY.ZZ` is the host doc ref. These refs are for display only — no command accepts sidecar refs as input arguments.
  
  ---
  
  ## 1. Commands
  
  Full detail per command: `rhidoc <command> --help-ai` or `rhidoc ai-skill <command>`.
  
  | Command | Synopsis |
  |---------|----------|
  | `regenerate` | Rebuild MANIFEST.md |
  | `make` | Create a doc or group at a position |
  | `delete` | Delete entries with gap-closing |
  | `move` | Move/reorder entries |
  | `punch` | Expand leaf into directory |
  | `hoist` | Dissolve directory |
  | `copy` | Copy file into workspace |
  | `attach` | Copy an external file into a doc's bundle as an attachment. Bundles are sets of files sharing a numeric prefix; `attach` aligns the copied file with the target doc's prefix. |
  | `rewrite` | Rewrite doc refs |
  | `rename` | Rename a directory or file slug |
  | `init` | Initialize a new workspace |
  | `portable` | Dump editable scripts into workspace |
  | `templates` | Print a shipped template (codex doc, skill, agent wiring) to stdout |
  | `ai-skill` | Print compact AI agent reference (pass a command name for its full block) |
  | `cat` | Print document contents by ref |
  | `tree` | Print workspace structure as a tree |
  | `ls` | List entries in a directory |
  | `bundle` | Show a doc's bundle (host + attachments) |
  | `orphans` | List orphaned attachments in the workspace |
  | `mdapi` | Structured read operations on a markdown doc |
  
  ---
  
  ## 2. Behavioral Rules
  
  - **Gap-closing**: When an entry is removed from a directory (`move`, `delete`, `hoist`),
    all higher-numbered siblings are renumbered down to fill the gap.
  - **Ref rewriting**: All commands that change file positions rewrite `docXX.YY.ZZ` refs
    across all `.md` files in the workspace and in `externalRefPaths` from `.rhidoc.json`.
  - **Bundles**: Structural operations treat a bundle (root `.md` + same-prefix siblings) as a
    unit. Non-md sidecars travel with their host automatically — no declaration required.
  - **Orphan warnings**: `rhidoc regenerate` prints a stderr warning for any sidecar file whose
    numeric prefix has no corresponding `.md` root, or whose prefix matches a directory. Orphan
    warnings never block operation; the MANIFEST is still written.
  - **Argument resolution**: `source`/`target`/`destination` args accept either a doc ref or a
    real existing filesystem path (relative to workspace root). Three ref input forms are accepted
    and normalized to canonical `docXX.YY` on entry: `doc04.08` (full), `d04.08` (short), `04.08`
    (bare coordinate). Fuzzy stem/prefix guessing is NOT supported — misspelled paths do not
    silently resolve. The slug after `NN-` is descriptive and never part of a reference.
  - **`--no-regen` scope**: Skips MANIFEST.md rebuild only. Ref rewriting in doc content still
    happens. Useful for batch operations — run many moves with `--no-regen`, then one final
    `rhidoc regenerate`.
  - **Index files**: `00-index.md` bodies are **generated artifacts** — rewritten by `rhidoc regenerate`
    and by any structural command that triggers regeneration. Do NOT hand-author the body of a `00-index.md`;
    edits will be overwritten. The only authored field is the frontmatter `title`. Contents tables and Topics
    lines are computed from direct children at regeneration time.
    `00-index.md` files cannot be renamed via `move --rename`; use `rename` to change the directory slug.
  - **Position 0 is reserved**: When a directory contains a `00-index.md`, slot 00 is reserved for it.
    Targeting slot 00 with `--at` or `--before` in such a directory is an error. At the workspace root
    (which has no `00-index.md`), slot 00 is a normal group position and may be targeted freely.
  
  ---
  
  ## 3. Common Patterns
  
  - **Batch restructure**: Use `--no-gap-close --no-regen` on all moves, then `rhidoc regenerate` once at end.
    ```
    rhidoc move doc01.02 01-strategy --no-gap-close --no-regen
    rhidoc move doc01.03 01-strategy --no-gap-close --no-regen
    rhidoc regenerate
    ```
  - **Dissolve a group**: Move children out one by one (check paths between moves), then delete
    the empty index file and remove the empty directory.
    ```
    rhidoc move 02-old-group/01-child.md 03-new-home --no-regen
    rhidoc move 02-old-group/02-child.md 03-new-home --no-regen
    rhidoc delete 02-old-group
    ```
  - **Create a new title group**: `rhidoc make -g PARENT slug` creates the directory
    with `00-index.md`. Then use `rhidoc move` or `rhidoc make` to populate it.
  - **Expand a file into a group**: `rhidoc punch <target>` converts `NN-slug.md` into a directory
    group: content moves to `NN-slug/01-slug.md` and a generated `00-index.md` is created. Inbound
    refs are shifted from `docXX.YY` to `docXX.YY.01` automatically.
  - **Hoist a subdirectory**: `rhidoc hoist <target>` hoists children into parent, removing
    the directory. Use `--keep-index` to preserve the index as a sibling file.
  - **Rename a slug**: `rhidoc rename <target> new-slug` renames on disk. Then use
    `rhidoc rewrite old-ref=new-ref` to update references if needed (rename does not rewrite refs).
  
  ---
  
  ## 4. Workspace State
  
  Workspace root: `.rhidoc/`
  
  | Directory | Title | Docs | Sidecars |
  |-----------|-------|------|----------|
  | `00-codex` | Codex | 7 | 0 |
  | `01-product-strategy` | Product Strategy | 8 | 0 |
  | `02-product-design` | Product Design | 14 | 0 |
  | `03-architecture` | Architecture | 7 | 0 |
  
  **Total docs**: 36
  **Total sidecars**: 0
  
  **externalRefPaths**: none configured
  
  '''
# ---
# name: TestHelpAi.test_help_ai_prints_deprecation_notice
  '''
  Deprecated: --help-ai is replaced by `rhidoc ai-skill`.
  Run `rhidoc ai-skill` for full semantic documentation.
  
  '''
# ---
# name: TestHoist.test_hoist_leaf_file_errors
  '''
  Error: source is not a directory: <TMPDIR>/.rhidoc/02-product-design/01-workspace-scripts.md
  
  '''
# ---
# name: TestMake.test_make_at_occupied_position_errors
  '''
  Error: position 01 is occupied in 00-codex.
  Occupied positions: [0, 1, 2, 3, 4, 5, 6]
  
  '''
# ---
# name: TestMake.test_make_help_has_examples
  '''
  usage: rhidoc make [-h] [-g] [--at AT] [--before BEFORE] [--dry-run]
                     [--no-regen]
                     target [target ...]
  
  positional arguments:
    target           [PARENT] SLUG — omit PARENT for a top-level title
  
  options:
    -h, --help       show this help message and exit
    -g, --group      Create a directory + 00-index.md instead of a leaf .md
    --at AT          Exact target ref (e.g. doc01.02.03.04); writes iff the slot
                     is free
    --before BEFORE  Insert at REF (e.g. doc01.02.03), bumping that sibling and
                     all higher ones up by one
    --dry-run
    --no-regen
  
  Examples:
    rhidoc make doc01.03 my-section
    rhidoc make my-top-level-doc
    rhidoc make -g doc01 new-group
    rhidoc make --at doc00.07 pinned-doc
    rhidoc make --before doc00.03 new-doc
    rhidoc make doc00 scratch --dry-run
  
  '''
# ---
# name: TestMakeGroup.test_make_group_at_occupied_errors
  '''
  Error: position 01 is occupied in ..
  Occupied positions: [0, 1, 2, 3]
  
  '''
# ---
# name: TestMakeGroup.test_make_group_help_has_examples
  '''
  usage: rhidoc make [-h] [-g] [--at AT] [--before BEFORE] [--dry-run]
                     [--no-regen]
                     target [target ...]
  
  positional arguments:
    target           [PARENT] SLUG — omit PARENT for a top-level title
  
  options:
    -h, --help       show this help message and exit
    -g, --group      Create a directory + 00-index.md instead of a leaf .md
    --at AT          Exact target ref (e.g. doc01.02.03.04); writes iff the slot
                     is free
    --before BEFORE  Insert at REF (e.g. doc01.02.03), bumping that sibling and
                     all higher ones up by one
    --dry-run
    --no-regen
  
  Examples:
    rhidoc make doc01.03 my-section
    rhidoc make my-top-level-doc
    rhidoc make -g doc01 new-group
    rhidoc make --at doc00.07 pinned-doc
    rhidoc make --before doc00.03 new-doc
    rhidoc make doc00 scratch --dry-run
  
  '''
# ---
# name: TestMakeGroup.test_make_group_rejects_workspace_prefix
  '''
  Error: path must be relative to workspace root, without the '.rhidoc' prefix. Got: '.rhidoc/05-new-section'. Try: '05-new-section'
  
  '''
# ---
# name: TestMovetoDryRun.test_dry_run_no_modification
  '''
  === Planned filesystem moves ===
    <TMPDIR>/.rhidoc/00-codex/06-integration.md -> <TMPDIR>/.rhidoc/00-codex/05-integration.md
    <TMPDIR>/.rhidoc/00-codex/05-taxonomy.md -> <TMPDIR>/.rhidoc/01-product-strategy/05-taxonomy.md
  
  === Ref rename map ===
    doc00.05 -> doc01.05
    doc00.06 -> doc00.05
  
  (dry-run: no files modified)
  
  '''
# ---
# name: TestPunch.test_punch_directory_errors
  '''
  Error: source is already a directory: <TMPDIR>/.rhidoc/02-product-design/04-web-platform
  
  '''
# ---
# name: TestTreeCommand.test_tree_default
  '''
  .rhidoc
  |-- 00-codex -- Codex
  |   |-- 00-index -- Codex
  |   |-- 01-about -- About
  |   |-- 02-maintenance -- Maintenance
  |   |-- 03-conventions -- Conventions
  |   |-- 04-ai-retrieval -- AI Retrieval
  |   |-- 05-taxonomy -- Taxonomy
  |   `-- 06-integration -- Integration
  |-- 01-product-strategy -- Product Strategy
  |   |-- 00-index -- Product Strategy
  |   |-- 01-mission -- Mission
  |   |-- 02-principles -- Principles
  |   |-- 03-glossary -- Glossary
  |   `-- 04-primary-sources -- Primary Sources
  |       |-- 00-index -- Primary Sources
  |       |-- 01-experiment -- The Carta Experiment
  |       |-- 02-foundations -- Theoretical Foundations
  |       `-- 03-unfolding -- Unfolding as Development
  |-- 02-product-design -- Product Design
  |   |-- 00-index -- Product Design
  |   |-- 01-workspace-scripts -- Workspace Scripts
  |   |-- 02-cli-flow -- CLI User Flow
  |   |-- 03-extension -- VSCode Extension
  |   |-- 04-web-platform -- Web Platform
  |   |   |-- 00-index -- Web Platform
  |   |   |-- 01-conversational -- Conversational Flow
  |   |   `-- 02-direct-editing -- Direct Editing Flow
  |   |-- 05-metamodel -- Metamodel
  |   |-- 06-presentation -- Presentation Model
  |   |-- 07-glossary -- Canvas Glossary
  |   `-- 08-decisions -- Decisions
  |       |-- 00-index -- Decisions
  |       |-- 01-yjs-state -- YJS State
  |       |-- 02-port-polarity -- Port Polarity
  |       `-- 03-formatters -- Formatters
  `-- 03-architecture -- Architecture
      |-- 00-index -- Architecture
      |-- 01-overview -- Overview
      |-- 02-script-pipeline -- Script Pipeline
      |-- 03-vscode-extension -- VSCode Extension
      |-- 04-canvas-state -- Canvas State
      |-- 05-frontend -- Frontend Architecture
      `-- 06-data-pipelines -- Data Pipelines
  
  '''
# ---
# name: TestTreeCommand.test_tree_no_title
  '''
  04-primary-sources
  |-- 00-index
  |-- 01-experiment
  |-- 02-foundations
  `-- 03-unfolding
  
  '''
# ---
# name: TestTreeCommand.test_tree_refs
  '''
  04-primary-sources -- Primary Sources (doc01.04)
  |-- 00-index -- Primary Sources (doc01.04.00)
  |-- 01-experiment -- The Carta Experiment (doc01.04.01)
  |-- 02-foundations -- Theoretical Foundations (doc01.04.02)
  `-- 03-unfolding -- Unfolding as Development (doc01.04.03)
  
  '''
# ---
# name: TestTreeCommand.test_tree_subtree
  '''
  04-primary-sources -- Primary Sources
  |-- 00-index -- Primary Sources
  |-- 01-experiment -- The Carta Experiment
  |-- 02-foundations -- Theoretical Foundations
  `-- 03-unfolding -- Unfolding as Development
  
  '''
# ---
# name: test_init_rehydrate_dry_run
  '''
    Would update: .rhidoc/00-codex/01-about.md
  
  Would update 1 file(s), 9 already current.
  
  '''
# ---
# name: test_init_rehydrate_without_workspace
  '''
  Error: .rhidoc.json not found in any directory above cwd. Are you inside a Rhidoc workspace?
  Hint: run `rhidoc init` first to scaffold a workspace.
  
  '''
# ---
# name: test_init_without_rehydrate_refuses_existing
  '''
  Workspace already exists: <TMPDIR>/.rhidoc.json
  Run `rhidoc init --rehydrate` to refresh codex templates and skill files.
  
  '''
# ---
